--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="./css/Home.css">
     <link rel="stylesheet" type="text/css" href="./css/Produtos.css">
     <link rel="stylesheet" type="text/css" href="./css/Contato.css">
+    <link rel="stylesheet" type="text/css" href="./css/footer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Meu 1º Projeto</title>
 </head>
 <body>
@@ -15,10 +17,12 @@
     <nav class="menu">
         <ul>
             <li><a href=""><img class="logoImg" src="img/meulogo1.png" />Vamos Viajar</a></li>
+            <div class="menuDiv">
             <li><a href="">Home</a></li>
             <li><a href="">Produtos</a></li>
-            <li><a href="">Promocoes</a></li>
+            <li><a href="">Promoções</a></li>
             <li><a href="">Contato</a></li>
+            </div>
         </ul>
     </nav>
 
@@ -37,37 +41,37 @@
             <p class=""> O momento mais feliz da vida humana, penso eu, é uma partida para terras desconhecidas.</p>
         </section>
         <section class="selectJornada">
-                <div class="uContainer">
+                <div>
                     <img class="jornada" src="img/jornada1.jpeg" />
                     <a href="">
                         <p class="">✈ Santorini, Grécia</p>
                     </a>
                 </div>
-                <div class="uContainer">
+                <div>
                     <img class="jornada" src="img/jornada2.jpeg" />
                     <a href="">
                         <p class="">✈ Veneza, Itália</p>
                     </a>
                 </div>
-                <div class="uContainer">
+                <div>
                     <img class="jornada" src="img/jornada3.jpeg" />
                     <a href="">
                         <p class="">✈ San Francisco</p>
                     </a>
                 </div>
-                <div class="uContainer">
+                <div>
                     <img class="jornada" src="img/jornada4.jpeg" />
                     <a href="">
                         <p class="">✈ Navagio, Grecia</p>
                     </a>
                 </div>
-                <div class="uContainer">
+                <div>
                     <img class="jornada" src="img/jornada5.jpeg" />
                     <a href="">
                         <p class="">✈ Ao Nang, Tailandia</p>
                     </a>
                 </div>
-                <div class="uContainer">
+                <div>
                     <img class="jornada" src="img/jornada6.jpeg" />
                     <a href="">
                         <p class="">✈ Phi Islands, Tailandia</p>
@@ -111,6 +115,26 @@
         </div>
     </div>
 
+		<footer>
+			<div class="footer-right">
+				<a href="#"><i class="fa fa-facebook"></i></a>
+				<a href="#"><i class="fa fa-linkedin"></i></a>
+				<a href="#"><i class="fa fa-github"></i></a>
+				<a href="#"><i class="fa fa-youtube-play"></i></a>
+			</div>
+
+			<div class="footer-left">
+				<p class="footer-links">
+					<a class="link-1" href="#">Home</a>
+					<a href="#">Produtos</a>
+					<a href="#">Promoções</a>
+					<a href="#">Sobre</a>
+					<a href="#">Faq</a>
+					<a href="#">Contatos</a>
+				</p>
+				<p>Drielison Lopes - Afro Academy &copy; 2022</p>
+			</div>
+		</footer>
 
 </body>
 </html>
