footer em promocoes

--- a/promocoes.html
+++ b/promocoes.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" type="text/css" href="./css/Promocoes.css">
+    <link rel="stylesheet" type="text/css" href="./css/footer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Promoções</title>
 </head>
 <body>
@@ -61,6 +63,27 @@
             </section>
         </section>
     </div>
+
+    <footer>
+        <div class="footer-right">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-linkedin"></i></a>
+            <a href="#"><i class="fa fa-github"></i></a>
+            <a href="#"><i class="fa fa-youtube-play"></i></a>
+        </div>
+
+        <div class="footer-left">
+            <p class="footer-links">
+                <a class="link-1" href="#">Home</a>
+                <a href="#">Produtos</a>
+                <a href="#">Promoções</a>
+                <a href="#">Sobre</a>
+                <a href="#">Faq</a>
+                <a href="#">Contatos</a>
+            </p>
+            <p>Drielison Lopes - Afro Academy &copy; 2022</p>
+        </div>
+    </footer>
 
 </body>
 </html>
