--- a/promocoes.html
+++ b/promocoes.html
@@ -12,20 +12,22 @@
 </head>
 <body>
     
-    <nav class="menu">
-        <ul class="cabecalho">
-            <li><a href=""><img class="logoImg" src="img/meulogo1.png" />Vamos Viajar</a></li>
-            <li><a href="">Home</a></li>
-            <li><a href="">Produtos</a></li>
-            <li><a href="">Promocoes</a></li>
-            <li><a href="">Contato</a></li>
+    <nav id="topo" class="menu">
+        <ul>
+            <li><a href="./index.html"><img class="logoImg" src="img/meulogo1.png" />Vamos Viajar</a></li>
+            <div class="menuDiv">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./index.html">Produtos</a></li>
+            <li><a href="./promocoes.html">Promoções</a></li>
+            <li><a href="./index.html">Contato</a></li>
+            </div>
         </ul>
     </nav>
 
     <div class="saudacao">
         <section class="tituloJornada" >
             <h1>Promoções</h1>
-            <p class="">Nas promoções temos aquela viagem pra guardar pra vida!</p>
+            <p class="fraseTopo">Nas promoções temos aquela viagem pra guardar pra vida!</p>
         </section>
         <section class="selectJornada">
             <section class="grid start">
@@ -71,7 +73,7 @@
             <a href="#"><i class="fa fa-github"></i></a>
             <a href="#"><i class="fa fa-youtube-play"></i></a>
         </div>
-
+        
         <div class="footer-left">
             <p class="footer-links">
                 <a class="link-1" href="#">Home</a>
@@ -82,6 +84,7 @@
                 <a href="#">Contatos</a>
             </p>
             <p>Drielison Lopes - Afro Academy &copy; 2022</p>
+            <a href="#topo"><i class="fa fa-solid fa-angle-up"></i></i></a>
         </div>
     </footer>
 
